--- a/src/main/resources/templates/admin/add_admin.html
+++ b/src/main/resources/templates/admin/add_admin.html
@@ -18,7 +18,7 @@
         <div class="card-body">
             <div class="col-md-10">
 
-                <form action="#" th:action="@{/save}" th:object="${adminForm}"   method="post">
+                <form action="#" th:action="@{/admin/save}" th:object="${adminForm}"   method="post">
 
                     <div class="row">
                         <div class="form-group col-md-8">
