--- a/src/main/resources/templates/admin/all_admins.html
+++ b/src/main/resources/templates/admin/all_admins.html
@@ -16,7 +16,7 @@
         <div class="card-body">
             <div th:switch="${admins}" class="container my-5">
                 <p class="my-5">
-                    <a href="/create_admin" class="btn btn-primary">
+                    <a href="/admin/create_admin" class="btn btn-primary">
                         <i class="fas fa-user-plus ml-2">Ajouter admin </i></a>
                 </p>
                 <div class="col-md-10">
@@ -39,13 +39,13 @@
                                 <td th:text="${admin.password}"></td>
 
                                 <td>
-                                    <a th:href="@{/edit/{id}(id=${admin.id})}"
+                                    <a th:href="@{/admin/edit/{id}(id=${admin.id})}"
                                        class="btn btn-primary">
                                         <i class="fas fa-user-edit ml-2"></i>
                                     </a>
                                 </td>
                                 <td>
-                                    <a th:href="@{/delete/{id}(id=${admin.id})}"
+                                    <a th:href="@{/admin/delete/{id}(id=${admin.id})}"
                                        class="btn btn-primary">
                                         <i class="fas fa-user-times ml-2"></i>
                                     </a>
